--- a/index.html
+++ b/index.html
@@ -17,6 +17,14 @@
                 
             </a>
             <div class="col-md-8">
+                <div>
+                    <div class="row bg-color-name-title">
+                        <div class="col heading">
+                            <h1 class="name">Taher Mahmood</h1>
+                            <h2 class="title">Full Stack Developer</h2>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
