--- a/index.html
+++ b/index.html
@@ -12,20 +12,37 @@
 
 <body>
     <header>
-        <div class="row">
+        <div class="row no-gutters">
             <a href="index.html" class="col-md-4 logo">
-                
+
             </a>
             <div class="col-md-8">
                 <div>
-                    <div class="row bg-color-name-title">
+                    <div class="row bg-color-name-title no-gutters">
                         <div class="col heading">
                             <h1 class="name">Taher Mahmood</h1>
                             <h2 class="title">Full Stack Developer</h2>
                         </div>
                     </div>
                 </div>
-
+                <div class="row no-gutters">
+                    <div class="col">
+                        <ul class="list-inline menu-container" id="nav">
+                            <li class="col-3 col-sm-3 ui-menu-color-home list-inline-item">
+                                <a href="#"><span>Home</span></a>
+                            </li>
+                            <li class="col-3 col-sm-3 ui-menu-color-resume list-inline-item">
+                                <a href="#"><span>Resume</span></a>
+                            </li>
+                            <li class="col-3 col-sm-3 ui-menu-color-contact list-inline-item">
+                                <a href="#"><span>Contact</span></a>
+                            </li>
+                            <li class="col-3 col-sm-3 ui-menu-color-download list-inline-item">
+                                <a href="#"><span>Download</span></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
     </header>
