--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
                 <div class="row no-gutters">
                     <div class="col">
                         <ul class="list-inline menu-container" id="nav">
-                            <li class="col-3 col-sm-3 ui-menu-color-home list-inline-item">
+                            <li class="col-3 col-sm-3 ui-menu-color-home list-inline-item menu-item">
                                 <a href="#"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
                             </li>
-                            <li class="col-3 col-sm-3 ui-menu-color-resume list-inline-item">
+                            <li class="col-3 col-sm-3 ui-menu-color-resume list-inline-item menu-item">
                                 <a href="#"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
                             </li>
-                            <li class="col-3 col-sm-3 ui-menu-color-contact list-inline-item">
+                            <li class="col-3 col-sm-3 ui-menu-color-contact list-inline-item menu-item">
                                 <a href="#"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
                             </li>
-                            <li class="col-3 col-sm-3 ui-menu-color-download list-inline-item">
+                            <li class="col-3 col-sm-3 ui-menu-color-download list-inline-item menu-item">
                                 <a href="#"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
                             </li>
                         </ul>
