--- a/resume.html
+++ b/resume.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+        type="text/css" />
     <script src="https://kit.fontawesome.com/0199d382d0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Taher</title>
@@ -30,16 +31,20 @@
                     <div class="col">
                         <ul class="list-inline menu-container" id="nav">
                             <li class="col-3 col-sm-3 ui-menu-color-home list-inline-item menu-item">
-                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home"
+                                        aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-3 col-sm-3 ui-menu-color-resume list-inline-item menu-item">
-                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"
+                                        aria-hidden="true"></i><span>Resume</span></a>
                             </li>
                             <li class="col-3 col-sm-3 ui-menu-color-contact list-inline-item menu-item">
-                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o"
+                                        aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-3 col-sm-3 ui-menu-color-download list-inline-item menu-item">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download"
+                                        aria-hidden="true"></i><span>Download</span></a>
                             </li>
                         </ul>
                     </div>
@@ -50,13 +55,30 @@
 
     <section class="container-fluid">
         <div class="row">
-            <div class="col-md-4 bg-color-personal-info section-column">
+            <div class="col-md-4 bg-color-work-history section-column">
                 <div class="row">
                     <div class="col-12">
-                        <h3 class="section-heading uppercase">Work History</h3>
+                        <h3 class="history-heading uppercase">Work History</h3>
                     </div>
                 </div>
-                
+                <div class="history-items">
+                    <div class="timeline-item" data-dates="02/1998 - 04/2004">
+                        <h4>National Collage of Art and Design (NCAD)</h4>
+                        <p>Sculpture in Residence</p>
+                    </div>
+                    <div class="timeline-item" data-dates="04/2004 - 06/2008">
+                        <h4>Fisher and Diaz Funeral Directors</h4>
+                        <p>Junior Embalmer</p>
+                    </div>
+                    <div class="timeline-item" data-dates="06/2008 - 06/2011">
+                        <h4>Phantom Design Inc. Dublin</h4>
+                        <p>Junior Front End Developer</p>
+                    </div>
+                    <div class="timeline-item" data-dates="06/2011 - Present">
+                        <h4>Hooli Inc. Silicon Valley</h4>
+                        <p>Full Stack Web Developer</p>
+                    </div>
+                </div>
             </div>
             <div class="col-md-8 bg-color-three-reasons section-column">
                 <div class="row">
@@ -73,7 +95,7 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Front End</h4>
                                 <p>
-                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript. 
+                                    I'm skilled in User Experience Design using the trinity of HTML/CSS/Javascript.
                                     I also have extensive experience in Front End Frameworks such as Angular and React.
                                 </p>
                             </div>
@@ -88,7 +110,7 @@
                                 <h4 class="three-reasons-heading uppercase">Back End</h4>
                                 <p>
                                     I specialise in data-driven web applications. Many of my projects utilise
-                                    document-based data.  I use python and Django in conjunction with MongoDB
+                                    document-based data. I use python and Django in conjunction with MongoDB
                                     to process and present information.
                                 </p>
                             </div>
@@ -98,31 +120,36 @@
                 <div class="row progress-section">
                     <div class="col">
                         <div class="progress">
-                            <div class="progress-bar" role="progress-bar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%;">
+                            <div class="progress-bar" role="progress-bar" aria-valuenow="90" aria-valuemin="0"
+                                aria-valuemax="100" style="width: 90%;">
                                 <span class="sr-only">90% Complete</span>
                             </div>
                             <span class="progress-type">HTML / HTML5</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-success" role="progress-bar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                            <div class="progress-bar bg-success" role="progress-bar" aria-valuenow="80"
+                                aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
                                 <span class="sr-only">80% Complete</span>
                             </div>
                             <span class="progress-type">CSS / CSS3</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-info" role="progress-bar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%;">
+                            <div class="progress-bar bg-info" role="progress-bar" aria-valuenow="70" aria-valuemin="0"
+                                aria-valuemax="100" style="width: 70%;">
                                 <span class="sr-only">70% Complete</span>
                             </div>
                             <span class="progress-type">JavaScript / JQuery</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-warning" role="progress-bar" aria-valuenow="8" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                            <div class="progress-bar bg-warning" role="progress-bar" aria-valuenow="8" aria-valuemin="0"
+                                aria-valuemax="100" style="width: 80%;">
                                 <span class="sr-only">80% Complete</span>
                             </div>
                             <span class="progress-type">Django / Python</span>
                         </div>
                         <div class="progress">
-                            <div class="progress-bar bg-danger" role="progress-bar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;">
+                            <div class="progress-bar bg-danger" role="progress-bar" aria-valuenow="80" aria-valuemin="0"
+                                aria-valuemax="100" style="width: 80%;">
                                 <span class="sr-only">80% Complete</span>
                             </div>
                             <span class="progress-type">SQL / NoSQL</span>
@@ -134,7 +161,7 @@
 
     </section>
 
-    <footer  class="container-fluid" id="footer-details">
+    <footer class="container-fluid" id="footer-details">
         <div class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
