--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css" type="text/css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/hover.css/2.1.1/css/hover-min.css"
+        type="text/css" />
     <script src="https://kit.fontawesome.com/0199d382d0.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Taher</title>
@@ -30,16 +31,20 @@
                     <div class="col">
                         <ul class="list-inline menu-container" id="nav">
                             <li class="col-3 col-sm-3 ui-menu-color-home list-inline-item menu-item">
-                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home" aria-hidden="true"></i><span>Home</span></a>
+                                <a href="index.html" class="hvr-sweep-to-bottom"><i class="fa fa-home"
+                                        aria-hidden="true"></i><span>Home</span></a>
                             </li>
                             <li class="col-3 col-sm-3 ui-menu-color-resume list-inline-item menu-item">
-                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap" aria-hidden="true"></i><span>Resume</span></a>
+                                <a href="resume.html" class="hvr-sweep-to-bottom"><i class="fa fa-graduation-cap"
+                                        aria-hidden="true"></i><span>Resume</span></a>
                             </li>
                             <li class="col-3 col-sm-3 ui-menu-color-contact list-inline-item menu-item">
-                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o" aria-hidden="true"></i><span>Contact</span></a>
+                                <a href="contact.html" class="hvr-sweep-to-bottom"><i class="fa fa-comment-o"
+                                        aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-3 col-sm-3 ui-menu-color-download list-inline-item menu-item">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
+                                <a href="assets/cv/Free-CV-template.pdf" class="hvr-sweep-to-bottom" target="_blank"><i
+                                        class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
                             </li>
                         </ul>
                     </div>
@@ -76,7 +81,7 @@
                     </div>
                     <div class="value">
                         <p>
-                            5 Somewhere st, Someplace, UK 
+                            5 Somewhere st, Someplace, UK
                         </p>
                     </div>
                 </div>
@@ -134,8 +139,8 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">How do I do it?</h4>
                                 <p>
-                                    I follow form as well as function.  I know that the aesthetics of effective
-                                    design combined with application speed, security and reliability combine to 
+                                    I follow form as well as function. I know that the aesthetics of effective
+                                    design combined with application speed, security and reliability combine to
                                     create a great user experience.
                                 </p>
                             </div>
@@ -149,8 +154,10 @@
                             <div class="col-10">
                                 <h4 class="three-reasons-heading uppercase">Why hire me?</h4>
                                 <p>
-                                    I work quickly and effectively in getting things built and working against the stock. I'm an 
-                                    excellent communicator who thrives in bright and enthusiastic teams and I'm also a self 
+                                    I work quickly and effectively in getting things built and working against the
+                                    stock. I'm an
+                                    excellent communicator who thrives in bright and enthusiastic teams and I'm also a
+                                    self
                                     starter when working solo.
                                 </p>
                             </div>
@@ -162,7 +169,7 @@
 
     </section>
 
-    <footer  class="container-fluid" id="footer-details">
+    <footer class="container-fluid" id="footer-details">
         <div class="row">
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">About</h5>
@@ -174,7 +181,7 @@
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">Need a printable version of my CV? Download it here.</p>
-                <a href="#" target="_blank" class="cv-pdf">
+                <a href="assets/cv/Free-CV-template.pdf" target="_blank" class="cv-pdf">
                     <i class="fa fa-download" aria-hidden="true"></i>
                     <span class="sr-only">Download link.</span>
                 </a>
@@ -183,37 +190,37 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.linkedin.com/in/taher-m" target="_blank">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
                             <span class="sr-only">LinkedIn</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://twitter.com/TaherCCG" target="_blank">
                             <i class="fa fa-twitter" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.facebook.com" target="_blank">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://pin.it/eraEias" target="_blank">
                             <i class="fa fa-pinterest" aria-hidden="true"></i>
                             <span class="sr-only">Pinterest</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://instagram.com" target="_blank">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.youtube.com/c/ChaosCrewGaming" target="_blank">
                             <i class="fa fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">YouTube</span>
                         </a>
