--- a/resume.html
+++ b/resume.html
@@ -43,8 +43,8 @@
                                         aria-hidden="true"></i><span>Contact</span></a>
                             </li>
                             <li class="col-3 col-sm-3 ui-menu-color-download list-inline-item menu-item">
-                                <a href="#" class="hvr-sweep-to-bottom"><i class="fa fa-download"
-                                        aria-hidden="true"></i><span>Download</span></a>
+                                <a href="assets/cv/Free-CV-template.pdf" class="hvr-sweep-to-bottom" target="_blank"><i
+                                        class="fa fa-download" aria-hidden="true"></i><span>Download</span></a>
                             </li>
                         </ul>
                     </div>
@@ -173,7 +173,7 @@
             <div class="col-sm-4">
                 <h5 class="uppercase general-sub">Download</h5>
                 <p class="inline-block">Need a printable version of my CV? Download it here.</p>
-                <a href="#" target="_blank" class="cv-pdf">
+                <a href="assets/cv/Free-CV-template.pdf" target="_blank" class="cv-pdf">
                     <i class="fa fa-download" aria-hidden="true"></i>
                     <span class="sr-only">Download link.</span>
                 </a>
@@ -182,37 +182,37 @@
                 <h5 class="uppercase general-sub">Social</h5>
                 <ul class="list-inline social-links">
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.linkedin.com/in/taher-m" target="_blank">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
                             <span class="sr-only">LinkedIn</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://twitter.com/TaherCCG" target="_blank">
                             <i class="fa fa-twitter" aria-hidden="true"></i>
                             <span class="sr-only">Twitter</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.facebook.com" target="_blank">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                             <span class="sr-only">Facebook</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://pin.it/eraEias" target="_blank">
                             <i class="fa fa-pinterest" aria-hidden="true"></i>
                             <span class="sr-only">Pinterest</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://instagram.com" target="_blank">
                             <i class="fa fa-instagram" aria-hidden="true"></i>
                             <span class="sr-only">Instagram</span>
                         </a>
                     </li>
                     <li class="list-inline-item">
-                        <a href="#" target="_blank">
+                        <a href="https://www.youtube.com/c/ChaosCrewGaming" target="_blank">
                             <i class="fa fa-youtube" aria-hidden="true"></i>
                             <span class="sr-only">YouTube</span>
                         </a>
