removed API key and deleted as it was exposed while following tutorial

--- a/interests.html
+++ b/interests.html
@@ -198,7 +198,7 @@
     </footer>
     <!-- Async load Google Maps API -->
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCyLnJCMJQubcI88zWJvqYhZkPqxWdm7ig&callback=initMap&v=weekly&libraries=marker"
+    <script src="https://maps.googleapis.com/maps/api/js?key=<addyoukey>&callback=initMap&v=weekly&libraries=marker"
     defer
     ></script>
     <script src="assets/js/maps.js"></script>
